# super-repo

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  RELEASE_PROCEDURE.md  USERS.cff  index.html  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template_bug.md  issue_template_feature.md  issue_template_release.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  pull_request_template_release.md
.github/workflows/: automated-testing.yml  gh-pages.yml
.reuse/: dep5
0.1/: 404.html  index.html  objects.inv
0.1/code/: index.html
0.2/: 404.html  index.html  sitemap.xml
0.2/code/: index.html
LICENSES/: BSD-2-Clause.txt  GPL-3.0-or-later.txt
bugfix/: 404.html  index.html  sitemap.xml
bugfix/code/: index.html
bugfix/css/: extra.css
code/: index.html
code/code_example/: index.html
code/install/: index.html
code/style/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/code/: index.html
develop/: 404.html  index.html  sitemap.xml
develop/code/: index.html
develop/css/: extra.css
develop/overrides/: main.html
development/best-practice/: index.html
development/collaboration/: index.html
development/documentation/: index.html
doc/: index.md
docs/: field_collaboration.md  field_documentation.md  field_git.md  index.md
docs/code/: index.md  (+1 more)
super_repo/: __init__.py  example_calculator.py  example_google.py
tests/: test_example.py
(+143 files in other folders)
